--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 
   <body>
     <p>Hello world! This is HTML5 Boilerplate.</p>
-    <script>
-      alert("working1");
-    </script>
-    <script src="./index.js" async></script>
+    <script></script>
+    <script src="./index.js"></script>
   </body>
 </html>
