hoisting and execution

--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
 
   <body>
     <p>Hello world! This is HTML5 Boilerplate.</p>
-    <script>
-      // console.log(window);
-      // console.log(this);
-    </script>
-    <script src="./index1.js"></script>
-    <script src="./index2.js"></script>
-    <script src="./index3.js"></script>
+    <script></script>
+    <script src="./index.js"></script>
   </body>
 </html>
